# odata_playground

./: .env.example  .gitignore  Cargo.toml  justfile
src/: main.rs
