[package]
name = "odata_playground"
version = "0.1.0"
authors = ["jarra <suhrawardi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = "0.10.10"
roxmltree = "0.13.1"
log = "0.4.11"
pretty_env_logger = "0.4.0"
# tokio = { version = "1.0.1", features = ["full"] }
tokio = { version = "0.2", features = ["full"] }

